<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_details_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/product_placeholder"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_image"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/item_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/item_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_price"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/item_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_description"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        android:text="Buy" />

</RelativeLayout>